Using MSVC 2017! Ignore .vs directory

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Source/ThirdParty/googletest/msvc/gtest.opensdf
 Source/ThirdParty/googletest/msvc/gtest.sdf
 Source/ThirdParty/googletest/msvc/gtest.v12.suo
 *.jbf
+Script/Msvc/AmjulaMusicTheory/.vs/
